Profile&Collection&Modules

--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -24,11 +24,16 @@
         android:id="@+id/collectionList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@drawable/collectionback"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:divider="@drawable/cardback"
         app:layout_constraintBottom_toTopOf="@+id/collectionBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        tools:listitem="@layout/collection_item">
 
     </ListView>
 
